--- a/coyou-app/src/app/user/login/login.component.html
+++ b/coyou-app/src/app/user/login/login.component.html
@@ -1,7 +1,13 @@
 <form (ngSubmit)="onSubmit();">
-  <label for="email" i18n="@@email">Email</label>
-  <input id="email" name="email" type="email" [(ngModel)]="user.email" />
-  <label for="password" i18n="@@password">Password</label>
-  <input id="password" name="password" type="password" [(ngModel)]="user.password" />
-  <button>Login</button>
+  <div class="form-group">
+    <label for="email" i18n="@@email">Email</label>
+    <input id="email" name="email" type="email" [(ngModel)]="user.email" class="form-control" />
+  </div>
+  
+  <div class="form-group">
+    <label for="password" i18n="@@password">Password</label>
+    <input id="password" name="password" type="password" [(ngModel)]="user.password" class="form-control" />
+  </div>
+
+  <button class="btn btn-primary">Login</button>
 </form>
