Errors and dashboard user...etc

--- a/coyou-app/src/app/user/signup/signup.component.html
+++ b/coyou-app/src/app/user/signup/signup.component.html
@@ -1,12 +1,21 @@
 <div class="container">
   <form (ngSubmit)="onSubmit();">
+    <div *ngIf="error" class="alert alert-danger">
+      <p>{{error.message}}</p>
+    </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <input id="email" name="email" type="email" [(ngModel)]="user.email" class="form-control" />
+      <input id="email" name="email" type="email" [(ngModel)]="user.email" #email="ngModel" class="form-control" required/>
+      <div *ngIf="!email.valid && !email.pristine" class="alert alert-danger">
+        Email is required
+      </div>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input id="password" name="password" type="password" [(ngModel)]="user.password" class="form-control" />
+      <input id="password" name="password" type="password" [(ngModel)]="user.password" #password="ngModel" class="form-control" required/>
+      <div *ngIf="!password.valid && !password.pristine" class="alert alert-danger">
+          Password is required
+        </div>
     </div>
     <button class="btn btn-primary">Signup!</button>
   </form>
