--- a/coyou-app/src/app/user/login/login.component.html
+++ b/coyou-app/src/app/user/login/login.component.html
@@ -1,13 +1,18 @@
 <div class="container">
   <form (ngSubmit)="onSubmit();">
+
+    <div *ngIf="error" class="alert alert-danger">
+      <p>{{error.message}}</p>
+    </div>
+
     <div class="form-group">
       <label for="email" i18n="@@email">Email</label>
-      <input id="email" name="email" type="email" [(ngModel)]="user.email" class="form-control" />
+      <input id="email" name="email" type="email" [(ngModel)]="user.email" class="form-control" required/>
     </div>
 
     <div class="form-group">
       <label for="password" i18n="@@password">Password</label>
-      <input id="password" name="password" type="password" [(ngModel)]="user.password" class="form-control" />
+      <input id="password" name="password" type="password" [(ngModel)]="user.password" class="form-control" required/>
     </div>
 
     <button class="btn btn-primary">Login</button>
